refactor maintainer metadata
Signed-off-by: Jan-Otto Kröpke <joe@cloudeteer.de>

--- a/charts/alertmanager-snmp-notifier/Chart.yaml
+++ b/charts/alertmanager-snmp-notifier/Chart.yaml
@@ -12,6 +12,7 @@ keywords:
 maintainers:
   - name: maxwo
     email: maxime.wojtczak.pub@icloud.com
+    url: https://github.com/maxwo
 annotations:
   "artifacthub.io/links": |
     - name: Chart Source
