--- a/charts/alertmanager/Chart.yaml
+++ b/charts/alertmanager/Chart.yaml
@@ -14,8 +14,10 @@ keywords:
 maintainers:
   - name: monotek
     email: monotek23@gmail.com
+    url: https://github.com/monotek
   - name: naseemkullah
     email: naseem@transit.app
+    url: https://github.com/naseemkullah
 annotations:
   "artifacthub.io/license": Apache-2.0
   "artifacthub.io/links": |
