--- a/charts/jiralert/Chart.yaml
+++ b/charts/jiralert/Chart.yaml
@@ -11,7 +11,9 @@ keywords:
   - alerting
   - jiralert
 maintainers:
-  - name: jkroepke
+  - name: Jan-Otto Kröpke
     email: github@jkroepke.de
+    url: https://github.com/jkroepke
   - name: zanhsieh
     email: zanhsieh@gmail.com
+    url: https://github.com/zanhsieh
