--- a/charts/prom-label-proxy/Chart.yaml
+++ b/charts/prom-label-proxy/Chart.yaml
@@ -10,5 +10,6 @@ keywords:
   - monitoring
   - prometheus
 maintainers:
-  - name: jkroepke
+  - name: Jan-Otto Kröpke
     email: github@jkroepke.de
+    url: https://github.com/jkroepke
