--- a/charts/prometheus-adapter/Chart.yaml
+++ b/charts/prometheus-adapter/Chart.yaml
@@ -15,6 +15,9 @@ sources:
 maintainers:
   - name: mattiasgees
     email: mattias.gees@jetstack.io
+    url: https://github.com/mattiasgees
   - name: steven-sheehy
+    url: https://github.com/steven-sheehy
   - name: hectorj2f
     email: hfernandez@mesosphere.com
+    url: https://github.com/hectorj2f
