--- a/charts/prometheus-cloudwatch-exporter/Chart.yaml
+++ b/charts/prometheus-cloudwatch-exporter/Chart.yaml
@@ -12,9 +12,12 @@ keywords:
   - prometheus
   - exporter
 maintainers:
-  - email: gianrubio@gmail.com
-    name: gianrubio
+  - name: gianrubio
+    email: gianrubio@gmail.com
+    url: https://github.com/gianrubio
   - name: torstenwalter
     email: mail@torstenwalter.de
+    url: https://github.com/torstenwalter
   - name: asherf
     email: asher@asherfoa.com
+    url: https://github.com/asherf
