--- a/charts/prometheus-consul-exporter/Chart.yaml
+++ b/charts/prometheus-consul-exporter/Chart.yaml
@@ -14,8 +14,10 @@ sources:
 maintainers:
   - name: timm088
     email: 8890118+timm088@users.noreply.github.com
+    url: https://github.com/timm088
   - name: gkarthiks
     email: github.gkarthiks@gmail.com
+    url: https://github.com/gkarthiks
 annotations:
   "artifacthub.io/license": Apache-2.0
   "artifacthub.io/links": |
