--- a/charts/prometheus-elasticsearch-exporter/Chart.yaml
+++ b/charts/prometheus-elasticsearch-exporter/Chart.yaml
@@ -14,8 +14,11 @@ keywords:
 maintainers:
   - name: svenmueller
     email: sven.mueller@commercetools.com
+    url: https://github.com/svenmueller
   - name: desaintmartin
     email: cedric@desaintmartin.fr
+    url: https://github.com/desaintmartin
   - name: zeritti
     email: rootsandtrees@posteo.de
+    url: https://github.com/zeritti
 type: application
