--- a/charts/prometheus-fastly-exporter/Chart.yaml
+++ b/charts/prometheus-fastly-exporter/Chart.yaml
@@ -11,3 +11,4 @@ home: https://github.com/fastly/fastly-exporter
 maintainers:
   - name: arslanbekov
     email: arslanbekov@gmail.com
+    url: https://github.com/arslanbekov
