--- a/charts/prometheus-ipmi-exporter/Chart.yaml
+++ b/charts/prometheus-ipmi-exporter/Chart.yaml
@@ -12,3 +12,4 @@ home: https://github.com/prometheus-community/ipmi_exporter
 maintainers:
   - name: lexfrei
     email: f@lex.la
+    url: https://github.com/lexfrei
