--- a/charts/prometheus-json-exporter/Chart.yaml
+++ b/charts/prometheus-json-exporter/Chart.yaml
@@ -12,7 +12,10 @@ home: https://github.com/prometheus-community/json_exporter
 maintainers:
   - name: schmiddim
     email: schmiddim@gmx.at
+    url: https://github.com/schmiddim
   - name: zanhsieh
     email: zanhsieh@gmail.com
+    url: https://github.com/zanhsieh
   - name: xiu
     email: github@xiu.io
+    url: https://github.com/xiu
