--- a/charts/prometheus-kafka-exporter/Chart.yaml
+++ b/charts/prometheus-kafka-exporter/Chart.yaml
@@ -13,10 +13,13 @@ keywords:
 maintainers:
   - name: gkarthiks
     email: github.gkarthiks@gmail.com
+    url: https://github.com/gkarthiks
   - name: golgoth31
     email: golgoth31@notrenet.com
+    url: https://github.com/golgoth31
   - name: zeritti
     email: rootsandtrees@posteo.de
+    url: https://github.com/zeritti
 annotations:
   "artifacthub.io/links": |
     - name: Chart Source
