--- a/charts/prometheus-modbus-exporter/Chart.yaml
+++ b/charts/prometheus-modbus-exporter/Chart.yaml
@@ -17,3 +17,4 @@ appVersion: "0.4.1"
 maintainers:
   - name: openenergyprojects
     email: openenergyprojects@gmail.com
+    url: https://github.com/openenergyprojects
