--- a/charts/prometheus-mongodb-exporter/Chart.yaml
+++ b/charts/prometheus-mongodb-exporter/Chart.yaml
@@ -8,10 +8,12 @@ keywords:
   - mongodb
   - prometheus
 maintainers:
-  - email: ssheehy@firescope.com
-    name: steven-sheehy
-  - email: rootsandtrees@posteo.de
-    name: zeritti
+  - name: steven-sheehy
+    email: ssheehy@firescope.com
+    url: https://github.com/steven-sheehy
+  - name: zeritti
+    email: rootsandtrees@posteo.de
+    url: https://github.com/zeritti
 name: prometheus-mongodb-exporter
 sources:
   - https://github.com/percona/mongodb_exporter
