--- a/charts/prometheus-nats-exporter/Chart.yaml
+++ b/charts/prometheus-nats-exporter/Chart.yaml
@@ -11,7 +11,9 @@ keywords:
   - prometheus
   - exporter
 maintainers:
-  - email: okgolove@markeloff.net
-    name: okgolove
-  - email: carlos@carlosbecker.com
-    name: caarlos0
+  - name: okgolove
+    email: okgolove@markeloff.net
+    url: https://github.com/okgolove
+  - name: caarlos0
+    email: carlos@carlosbecker.com
+    url: https://github.com/caarlos0
