--- a/charts/prometheus-nginx-exporter/Chart.yaml
+++ b/charts/prometheus-nginx-exporter/Chart.yaml
@@ -15,8 +15,10 @@ keywords:
 maintainers:
   - name: nlamirault
     email: nicolas.lamirault@gmail.com
+    url: https://github.com/nlamirault
   - name: zeritti
     email: rootsandtrees@posteo.de
+    url: https://github.com/zeritti
 icon: https://raw.githubusercontent.com/cncf/artwork/master/prometheus/icon/color/prometheus-icon-color.svg
 annotations:
   artifacthub.io/links: |
