--- a/charts/prometheus-opencost-exporter/Chart.yaml
+++ b/charts/prometheus-opencost-exporter/Chart.yaml
@@ -12,5 +12,6 @@ keywords:
 - prometheus
 - exporter
 maintainers:
-- email: mattray@kubecost.com
-  name: mattray
+- name: mattray
+  email: mattray@kubecost.com
+  url: https://github.com/mattray
