--- a/charts/prometheus-operator-admission-webhook/Chart.yaml
+++ b/charts/prometheus-operator-admission-webhook/Chart.yaml
@@ -14,6 +14,7 @@ keywords:
 maintainers:
   - name: zeritti
     email: rootsandtrees@posteo.de
+    url: https://github.com/zeritti
 sources:
   - https://github.com/prometheus-operator/prometheus-operator
   - https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus-operator-admission-webhook
