--- a/charts/prometheus-operator-crds/Chart.yaml
+++ b/charts/prometheus-operator-crds/Chart.yaml
@@ -16,12 +16,16 @@ sources:
 maintainers:
   - name: dacamposol
     email: dacamposol@gmail.com
+    url: https://github.com/dacamposol
   - name: desaintmartin
     email: cedric@desaintmartin.fr
+    url: https://github.com/desaintmartin
   - name: QuentinBisson
     email: quentin.bisson@gmail.com
-  - name: jkroepke
+    url: https://github.com/QuentinBisson
+  - name: Jan-Otto Kröpke
     email: github@jkroepke.de
+    url: https://github.com/jkroepke
 annotations:
   artifacthub.io/links: |
     - name: Chart Source
