--- a/charts/prometheus-pgbouncer-exporter/Chart.yaml
+++ b/charts/prometheus-pgbouncer-exporter/Chart.yaml
@@ -11,10 +11,12 @@ keywords:
   - prometheus
   - exporter
 maintainers:
-  - email: stewart.shea@gmail.com
-    name: stewartshea
-  - email: rootsandtrees@posteo.de
-    name: zeritti
+  - name: stewartshea
+    email: stewart.shea@gmail.com
+    url: https://github.com/stewartshea
+  - name: zeritti
+    email: rootsandtrees@posteo.de
+    url: https://github.com/zeritti
 type: application
 dependencies:
   - name: postgresql
