--- a/charts/prometheus-pingmesh-exporter/Chart.yaml
+++ b/charts/prometheus-pingmesh-exporter/Chart.yaml
@@ -8,8 +8,9 @@ keywords:
   - pingmesh
   - monitoring
 maintainers:
-  - email: dongjiang1989@126.com
-    name: dongjiang1989
+  - name: dongjiang1989
+    email: dongjiang1989@126.com
+    url: https://github.com/dongjiang1989
 name: prometheus-pingmesh-exporter
 sources:
   - https://github.com/kubeservice-stack/pingmesh-agent
