--- a/charts/prometheus-postgres-exporter/Chart.yaml
+++ b/charts/prometheus-postgres-exporter/Chart.yaml
@@ -11,10 +11,13 @@ keywords:
 - prometheus
 - exporter
 maintainers:
-- email: gianrubio@gmail.com
-  name: gianrubio
-- email: zanhsieh@gmail.com
-  name: zanhsieh
-- email: rootsandtrees@posteo.de
-  name: zeritti
+- name: gianrubio
+  email: gianrubio@gmail.com
+  url: https://github.com/gianrubio
+- name: zanhsieh
+  email: zanhsieh@gmail.com
+  url: https://github.com/zanhsieh
+- name: zeritti
+  email: rootsandtrees@posteo.de
+  url: https://github.com/zeritti
 type: application
