--- a/charts/prometheus-pushgateway/Chart.yaml
+++ b/charts/prometheus-pushgateway/Chart.yaml
@@ -11,12 +11,15 @@ keywords:
   - pushgateway
   - prometheus
 maintainers:
-  - email: gianrubio@gmail.com
-    name: gianrubio
-  - email: christian.staude@staffbase.com
-    name: cstaud
-  - email: rootsandtrees@posteo.de
-    name: zeritti
+  - name: gianrubio
+    email: gianrubio@gmail.com
+    url: https://github.com/gianrubio
+  - name: cstaud
+    email: christian.staude@staffbase.com
+    url: https://github.com/cstaud
+  - name: zeritti
+    email: rootsandtrees@posteo.de
+    url: https://github.com/zeritti
 annotations:
   "artifacthub.io/license": Apache-2.0
   "artifacthub.io/links": |
