--- a/charts/prometheus-rabbitmq-exporter/Chart.yaml
+++ b/charts/prometheus-rabbitmq-exporter/Chart.yaml
@@ -9,9 +9,13 @@ sources:
 maintainers:
 - name: desaintmartin
   email: cedric@desaintmartin.fr
+  url: https://github.com/desaintmartin
 - name: iamabhishek-dubey
   email: abhishekbhardwaj510@gmail.com
+  url: https://github.com/iamabhishek-dubey
 - name: juanchimienti
   email: juan.chimienti@gmail.com
+  url: https://github.com/juanchimienti
 - name: monotek
   email: monotek23@gmail.com
+  url: https://github.com/monotek
