--- a/charts/prometheus-redis-exporter/Chart.yaml
+++ b/charts/prometheus-redis-exporter/Chart.yaml
@@ -12,6 +12,8 @@ keywords:
 maintainers:
   - name: acondrat
     email: arcadie.condrat@gmail.com
+    url: https://github.com/acondrat
   - name: zanhsieh
     email: zanhsieh@gmail.com
+    url: https://github.com/zanhsieh
 type: application
