--- a/charts/prometheus-smartctl-exporter/Chart.yaml
+++ b/charts/prometheus-smartctl-exporter/Chart.yaml
@@ -29,5 +29,7 @@ sources:
 
 maintainers:
   - name: kfox1111
+    url: https://github.com/kfox1111
   - name: zeritti
     email: rootsandtrees@posteo.de
+    url: https://github.com/zeritti
