--- a/charts/prometheus-stackdriver-exporter/Chart.yaml
+++ b/charts/prometheus-stackdriver-exporter/Chart.yaml
@@ -14,5 +14,7 @@ keywords:
 maintainers:
   - name: apenney
     email: apenney@gmail.com
+    url: https://github.com/apenney
   - name: rpahli
     email: pahli88@googlemail.com
+    url: https://github.com/rpahli
