--- a/charts/prometheus-statsd-exporter/Chart.yaml
+++ b/charts/prometheus-statsd-exporter/Chart.yaml
@@ -15,5 +15,8 @@ keywords:
   - prometheus
   - exporter
 maintainers:
-  - email: d@rovergulf.net
-    name: scDisorder
+  - name: scDisorder
+    email: d@rovergulf.net
+    url: https://github.com/scDisorder
+
+
