--- a/charts/prometheus-systemd-exporter/Chart.yaml
+++ b/charts/prometheus-systemd-exporter/Chart.yaml
@@ -10,5 +10,7 @@ sources:
 maintainers:
 - name: capuche2412
   email: aleroux@wiremind.io
+  url: https://github.com/capuche2412
 - name: maxime1907
   email: 19607336+maxime1907@users.noreply.github.com
+  url: https://github.com/maxime1907
