--- a/charts/prometheus-to-sd/Chart.yaml
+++ b/charts/prometheus-to-sd/Chart.yaml
@@ -8,5 +8,6 @@ keywords:
 maintainers:
 - name: acondrat
   email: arcadie.condrat@gmail.com
+  url: https://github.com/acondrat
 name: prometheus-to-sd
 version: 0.4.2
