--- a/charts/prometheus-yet-another-cloudwatch-exporter/Chart.yaml
+++ b/charts/prometheus-yet-another-cloudwatch-exporter/Chart.yaml
@@ -17,5 +17,7 @@ keywords:
 maintainers:
   - name: cristiangreco
     email: cristian.greco@grafana.com
+    url: https://github.com/cristiangreco
   - name: thomaspeitz
     email: info@thomas-peitz.de
+    url: https://github.com/thomaspeitz
