--- a/charts/prometheus/Chart.yaml
+++ b/charts/prometheus/Chart.yaml
@@ -15,14 +15,19 @@ sources:
 maintainers:
   - name: gianrubio
     email: gianrubio@gmail.com
+    url: https://github.com/gianrubio
   - name: zanhsieh
     email: zanhsieh@gmail.com
+    url: https://github.com/zanhsieh
   - name: Xtigyro
     email: miroslav.hadzhiev@gmail.com
+    url: https://github.com/Xtigyro
   - name: naseemkullah
     email: naseem@transit.app
+    url: https://github.com/naseemkullah
   - name: zeritti
     email: rootsandtrees@posteo.de
+    url: https://github.com/zeritti
 type: application
 dependencies:
   - name: alertmanager
