--- a/charts/kube-prometheus-stack/Chart.yaml
+++ b/charts/kube-prometheus-stack/Chart.yaml
@@ -5,20 +5,28 @@ type: application
 maintainers:
   - name: andrewgkew
     email: andrew@quadcorps.co.uk
+    url: https://github.com/andrewgkew
   - name: gianrubio
     email: gianrubio@gmail.com
+    url: https://github.com/gianrubio
   - name: gkarthiks
     email: github.gkarthiks@gmail.com
+    url: https://github.com/gkarthiks
   - name: GMartinez-Sisti
     email: kube-prometheus-stack@sisti.pt
-  - name: jkroepke
+    url: https://github.com/GMartinez-Sisti
+  - name: Jan-Otto Kröpke
     email: github@jkroepke.de
+    url: https://github.com/jkroepke
   - name: scottrigby
     email: scott@r6by.com
+    url: https://github.com/scottrigby
   - name: Xtigyro
     email: miroslav.hadzhiev@gmail.com
+    url: https://github.com/Xtigyro
   - name: QuentinBisson
     email: quentin.bisson@gmail.com
+    url: https://github.com/QuentinBisson
 name: kube-prometheus-stack
 sources:
   - https://github.com/prometheus-community/helm-charts
