--- a/charts/prometheus-blackbox-exporter/Chart.yaml
+++ b/charts/prometheus-blackbox-exporter/Chart.yaml
@@ -15,10 +15,14 @@ keywords:
 maintainers:
   - name: desaintmartin
     email: cedric@desaintmartin.fr
+    url: https://github.com/desaintmartin
   - name: gianrubio
     email: gianrubio@gmail.com
+    url: https://github.com/gianrubio
   - name: rsotnychenko
     email: me@sota.sh
+    url: https://github.com/rsotnychenko
   - name: monotek
     email: monotek23@gmail.com
+    url: https://github.com/monotek
 type: application
