--- a/charts/prometheus-druid-exporter/Chart.yaml
+++ b/charts/prometheus-druid-exporter/Chart.yaml
@@ -7,10 +7,12 @@ kubeVersion: ">=1.16.0-0"
 type: application
 home: https://github.com/opstree/druid-exporter
 maintainers:
-  - email: abhishekbhardwaj510@gmail.com
-    name: iamabhishek-dubey
-  - email: sandeep@opstree.com
-    name: sandy724
+  - name: iamabhishek-dubey
+    email: abhishekbhardwaj510@gmail.com
+    url: https://github.com/iamabhishek-dubey
+  - name: sandy724
+    email: sandeep@opstree.com
+    url: https://github.com/sandy724
 sources:
   - https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus-druid-exporter
   - https://github.com/opstree/druid-exporter
