--- a/charts/prometheus-mysql-exporter/Chart.yaml
+++ b/charts/prometheus-mysql-exporter/Chart.yaml
@@ -9,5 +9,7 @@ sources:
 maintainers:
   - name: juanchimienti
     email: juan.chimienti@gmail.com
+    url: https://github.com/juanchimienti
   - name: monotek
     email: monotek23@gmail.com
+    url: https://github.com/monotek
