--- a/charts/prometheus-node-exporter/Chart.yaml
+++ b/charts/prometheus-node-exporter/Chart.yaml
@@ -12,12 +12,15 @@ home: https://github.com/prometheus/node_exporter/
 sources:
   - https://github.com/prometheus/node_exporter/
 maintainers:
-  - email: gianrubio@gmail.com
-    name: gianrubio
-  - email: zanhsieh@gmail.com
-    name: zanhsieh
-  - email: rootsandtrees@posteo.de
-    name: zeritti
+  - name: gianrubio
+    email: gianrubio@gmail.com
+    url: https://github.com/gianrubio
+  - name: zanhsieh
+    email: zanhsieh@gmail.com
+    url: https://github.com/zanhsieh
+  - name: zeritti
+    email: rootsandtrees@posteo.de
+    url: https://github.com/zeritti
 annotations:
   "artifacthub.io/license": Apache-2.0
   "artifacthub.io/links": |
