--- a/charts/prometheus-pingdom-exporter/Chart.yaml
+++ b/charts/prometheus-pingdom-exporter/Chart.yaml
@@ -14,8 +14,10 @@ sources:
 maintainers:
 - name: monotek
   email: monotek23@gmail.com
+  url: https://github.com/monotek
 - name: rpahli
   email: pahli88@googlemail.com
+  url: https://github.com/rpahli
 icon: https://raw.githubusercontent.com/cncf/artwork/master/prometheus/icon/color/prometheus-icon-color.svg
 annotations:
   artifacthub.io/links: |
