--- a/charts/prometheus-snmp-exporter/Chart.yaml
+++ b/charts/prometheus-snmp-exporter/Chart.yaml
@@ -13,7 +13,10 @@ keywords:
 maintainers:
   - name: miouge1
     email: maxime@root314.com
+    url: https://github.com/miouge1
   - name: xiu
     email: github@xiu.io
+    url: https://github.com/xiu
   - name: walker-tom
     email: walker.thomas.p@gmail.com
+    url: https://github.com/walker-tom
