--- a/charts/prometheus-windows-exporter/Chart.yaml
+++ b/charts/prometheus-windows-exporter/Chart.yaml
@@ -13,5 +13,6 @@ home: https://github.com/prometheus-community/windows_exporter/
 sources:
   - https://github.com/prometheus-community/windows_exporter/
 maintainers:
-  - name: jkroepke
+  - name: Jan-Otto Kröpke
     email: github@jkroepke.de
+    url: https://github.com/jkroepke
