--- a/charts/prometheus-stackdriver-exporter/values.yaml
+++ b/charts/prometheus-stackdriver-exporter/values.yaml
@@ -109,6 +109,12 @@ annotations: {}
 ##
 extraArgs: {}
 
+## Extra environment variables
+##
+extraEnv: []
+  # - name: GOMAXPROCS
+  #   value: "2"
+
 ## Node labels for stackdriver-exporter pod assignment
 ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
 ##
