[kube-prometheus-stack] Add poc of grafana operator resources
Signed-off-by: Oleg Tsymbal <dzirg44@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1021,6 +1021,15 @@ grafana:
   ##
   defaultDashboardsEnabled: true
 
+  ## Deploy default dashboards as GrafanaDashboards custom resources
+  ##
+  grafanaConfigMapDashboards: true
+
+  ## Deploy default dashboards as ConfigMaps
+  ## Note: This requires grafanaConfigMapDashboards to be true as CRDs reference the ConfigMaps
+  ##
+  grafanaOperatorDashboards: false
+
   ## Timezone for the default dashboards
   ## Other options are: browser or a specific timezone, i.e. Europe/Luxembourg
   ##
