--- a/charts/kube-prometheus-stack/templates/grafana/configmap-dashboards.yaml
+++ b/charts/kube-prometheus-stack/templates/grafana/configmap-dashboards.yaml
@@ -1,4 +1,4 @@
-{{- if or (and .Values.grafana.enabled .Values.grafana.defaultDashboardsEnabled) .Values.grafana.forceDeployDashboards }}
+{{- if and (or (and .Values.grafana.enabled .Values.grafana.defaultDashboardsEnabled) .Values.grafana.forceDeployDashboards) .Values.grafana.grafanaConfigMapDashboards }}
 {{- $files := .Files.Glob "dashboards-1.14/*.json" }}
 {{- if $files }}
 apiVersion: v1
@@ -16,7 +16,7 @@ items:
       {{ $.Values.grafana.sidecar.dashboards.label }}: {{ ternary $.Values.grafana.sidecar.dashboards.labelValue "1" (not (empty $.Values.grafana.sidecar.dashboards.labelValue)) | quote }}
       {{- end }}
       app: {{ template "kube-prometheus-stack.name" $ }}-grafana
-{{ include "kube-prometheus-stack.labels" $ | indent 6 }}
+      {{ include "kube-prometheus-stack.labels" $ | indent 6 }}
   data:
     {{ $dashboardName }}.json: {{ $.Files.Get $path | toJson }}
 {{- end }}
