--- a/renovate.json
+++ b/renovate.json
@@ -69,7 +69,7 @@
       "commitMessagePrefix": "[{{ lookup (split packageFileDir '/') 1 }}] ",
       "groupName": "{{ lookup (split packageFileDir '/') 1 }} dependency non-major updates",
       "separateMajorMinor": true,
-      "postUpdateOptions": "helmUpdateSubChartArchives",
+      "postUpdateOptions": ["helmUpdateSubChartArchives"],
       "major": {
         "groupName": "{{ lookup (split packageFileDir '/') 1 }} dependency major updates"
       }
