[ci] renovate-bump-chart-version.yaml use github.head_ref instead github.ref_name
Signed-off-by: Jan-Otto Kröpke <github@jkroepke.de>

--- a/.github/workflows/renovate-bump-chart-version.yaml
+++ b/.github/workflows/renovate-bump-chart-version.yaml
@@ -74,7 +74,7 @@ jobs:
               "input": {
                 "branch": {
                   "repositoryNameWithOwner": "${{ github.repository }}",
-                  "branchName": "${{ github.ref_name }}"
+                  "branchName": "${{ github.head_ref }}"
                 },
                 "message": { "headline": "Update Chart.yaml" },
                 "fileChanges": {
