[ci] renovate-bump-chart-version.yaml use github.head_ref instead github.ref_name (#5204)

--- a/.github/workflows/renovate-bump-chart-version.yaml
+++ b/.github/workflows/renovate-bump-chart-version.yaml
@@ -58,6 +58,7 @@ jobs:
         env:
           CHART: ${{ steps.list-changed.outputs.changed_list }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_HEAD_REF: ${{ github.head_ref }}
         run: |
           curl https://api.github.com/graphql -f \
                -sSf -H "Authorization: Bearer $GITHUB_TOKEN" \
@@ -74,7 +75,7 @@ jobs:
               "input": {
                 "branch": {
                   "repositoryNameWithOwner": "${{ github.repository }}",
-                  "branchName": "${{ github.ref_name }}"
+                  "branchName": "$GITHUB_HEAD_REF"
                 },
                 "message": { "headline": "Update Chart.yaml" },
                 "fileChanges": {
