add links to chart.yaml
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/prometheus-modbus-exporter/Chart.yaml
+++ b/charts/prometheus-modbus-exporter/Chart.yaml
@@ -1,19 +1,18 @@
 apiVersion: v2
 name: prometheus-modbus-exporter
 description: A Helm chart for prometheus-modbus-exporter
-
+home: https://github.com/RichiH/modbus_exporter
+sources:
+  - https://github.com/RichiH/modbus_exporter
 keywords:
   - modbus
   - modbus_exporter
   - metric
   - monitoring
   - prometheus
-
 type: application
-
-version: 0.1.2
+version: 0.1.3
 appVersion: "0.4.1"
-
 maintainers:
   - name: openenergyprojects
     email: openenergyprojects@gmail.com
