[ci] update runners to 24.04
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,7 @@ jobs:
       packages: write # needed for ghcr access
       id-token: write # needed for keyless signing
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
