--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -8,7 +8,7 @@ on: pull_request
 jobs:
   build:
     name: Lint Code Base
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
