--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,4 +1,5 @@
 name: Lint Code Base
+permissions: {}
 
 # Documentation:
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions
@@ -9,6 +10,8 @@ jobs:
   build:
     name: Lint Code Base
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -16,16 +19,24 @@ jobs:
           fetch-depth: 0
 
       - name: Lint Code Base
-        uses: docker://github/super-linter:slim-v4
+        uses: super-linter/super-linter/slim@v7.2.1
         env:
-          DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LINTER_RULES_PATH: .github/linters
+          MULTI_STATUS: false
           VALIDATE_ALL_CODEBASE: false
-          VALIDATE_BASH: false
-          VALIDATE_JSCPD: false
-          VALIDATE_KUBERNETES_KUBEVAL: false
-          VALIDATE_PYTHON: false
-          VALIDATE_PYTHON_FLAKE8: false
-          VALIDATE_PYTHON_BLACK: false
-          VALIDATE_YAML: false
+          VALIDATE_BASH: true
+          VALIDATE_BASH_EXEC: true
+          # VALIDATE_CHECKOV: true - always scans everything and all charts have too much errors
+          VALIDATE_EDITORCONFIG: true
+          VALIDATE_ENV: true
+          VALIDATE_GITHUB_ACTIONS: true
+          VALIDATE_GITLEAKS: true
+          VALIDATE_JSON: true
+          VALIDATE_MARKDOWN: true
+          VALIDATE_NATURAL_LANGUAGE: true
+          VALIDATE_PYTHON: true
+          VALIDATE_RENOVATE: true
+          VALIDATE_SHELL_SHFMT: true
+          VALIDATE_XML: true
+          VALIDATE_YAML: true
