--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -9,7 +9,7 @@ on: pull_request
 jobs:
   build:
     name: Lint Code Base
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       contents: read
     steps:
