--- a/charts/kube-prometheus-stack/charts/crds/templates/upgrade/crds.yaml
+++ b/charts/kube-prometheus-stack/charts/crds/templates/upgrade/crds.yaml
@@ -11,5 +11,5 @@ metadata:
   labels:
     {{- include "kube-prometheus-stack.upgradeCRD.labels" . | nindent 4 }}
 binaryData:
-  crds.tar.xz: {{ .Files.Get "files/crds.tar.xz" | b64enc }}
+  crds.xz: {{ .Files.Get "files/crds.xz" | b64enc }}
 {{- end }}
