[kube-prometheus-stack] Add datasources as crds
Signed-off-by: Oleg Tsymbal <dzirg44@gmail.com>

--- a/charts/kube-prometheus-stack/templates/grafana/configmap-dashboards.yaml
+++ b/charts/kube-prometheus-stack/templates/grafana/configmap-dashboards.yaml
@@ -1,4 +1,5 @@
 {{- if and (or (and .Values.grafana.enabled .Values.grafana.defaultDashboardsEnabled) .Values.grafana.forceDeployDashboards) .Values.grafana.grafanaConfigMapDashboards }}
+{{- if .Values.grafana.grafanaConfigMapDashboards }}
 {{- $files := .Files.Glob "dashboards-1.14/*.json" }}
 {{- if $files }}
 apiVersion: v1
@@ -19,6 +20,7 @@ items:
       {{ include "kube-prometheus-stack.labels" $ | indent 6 }}
   data:
     {{ $dashboardName }}.json: {{ $.Files.Get $path | toJson }}
+{{- end }}
 {{- end }}
 {{- end }}
 {{- end }}
