--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1013,6 +1013,14 @@ grafana:
   ##
   forceDeployDatasources: false
 
+  ## Grafana ConfigMap Datasources
+  ##
+  grafanaConfigMapDatasources: true
+
+  ## Grafana operator datasource provisioning
+  ##
+  grafanaOperatorDatasources: false
+
   ## ForceDeployDashboard Create dashboard configmap even if grafana deployment has been disabled
   ##
   forceDeployDashboards: false
@@ -1021,14 +1029,23 @@ grafana:
   ##
   defaultDashboardsEnabled: true
 
-  ## Deploy default dashboards as GrafanaDashboards custom resources
-  ##
-  grafanaConfigMapDashboards: true
-
   ## Deploy default dashboards as ConfigMaps
   ## Note: This requires grafanaConfigMapDashboards to be true as CRDs reference the ConfigMaps
   ##
+  grafanaConfigMapDashboards: true
+
+  ## Deploy default dashboards as GrafanaDashboards custom resources
+  ##
   grafanaOperatorDashboards: false
+
+  ## Specify instanceSelector to select the Grafana instance
+  ##
+
+  grafanaOperatorInstanceSelector:
+    instanceSelector:
+      app.kubernetes.io/instance: grafana
+      app.kubernetes.io/name: grafana-operator
+
 
   ## Timezone for the default dashboards
   ## Other options are: browser or a specific timezone, i.e. Europe/Luxembourg
