[ci] Update codeowners script
* Fixup issue link to point to correct location.
* Remove `@jkroepke` from manual listing now that they are a member of `helm-chart-admins`.
* Refactor `scripts/check-codeowners.sh` to simplify it.

Signed-off-by: SuperQ <superq@gmail.com>

--- a/.github/workflows/check-codeowners.yaml
+++ b/.github/workflows/check-codeowners.yaml
@@ -13,7 +13,7 @@ jobs:
 
       - name: generate CODEOWNERS
         run: |
-          ./scripts/check-codeowners.sh > .github/CODEOWNERS
+          ./scripts/check-codeowners.sh | tee .github/CODEOWNERS
 
       - name: check CODEOWNERS for modifications
         run: |
