--- a/charts/kube-state-metrics/values.yaml
+++ b/charts/kube-state-metrics/values.yaml
@@ -527,6 +527,7 @@ startupProbe:
 ## Liveness probe
 ##
 livenessProbe:
+  enabled: true
   failureThreshold: 3
   httpGet:
     httpHeaders: []
@@ -539,6 +540,7 @@ livenessProbe:
 ## Readiness probe
 ##
 readinessProbe:
+  enabled: true
   failureThreshold: 3
   httpGet:
     httpHeaders: []
