--- a/charts/kube-prometheus-stack/charts/crds/templates/upgrade/job.yaml
+++ b/charts/kube-prometheus-stack/charts/crds/templates/upgrade/job.yaml
@@ -48,7 +48,7 @@ spec:
             - sh
           args:
             - -c
-            - bzcat /crds/crds.tar.xz > /tmp/crds.yaml
+            - bzcat /crds/crds.bz2 > /tmp/crds.yaml
           {{- with .Values.upgradeJob.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
