--- a/charts/kube-prometheus-stack/Chart.yaml
+++ b/charts/kube-prometheus-stack/Chart.yaml
@@ -15,7 +15,7 @@ maintainers:
   - name: GMartinez-Sisti
     email: kube-prometheus-stack@sisti.pt
     url: https://github.com/GMartinez-Sisti
-  - name: Jan-Otto Kröpke
+  - name: jkroepke
     email: github@jkroepke.de
     url: https://github.com/jkroepke
   - name: scottrigby
@@ -31,7 +31,7 @@ name: kube-prometheus-stack
 sources:
   - https://github.com/prometheus-community/helm-charts
   - https://github.com/prometheus-operator/kube-prometheus
-version: 68.2.1
+version: 68.2.2
 appVersion: v0.79.2
 kubeVersion: ">=1.19.0-0"
 home: https://github.com/prometheus-operator/kube-prometheus
