[ci] disable validate-maintainers in helm-chart-testing
Signed-off-by: Jan-Otto Kröpke <joe@cloudeteer.de>

--- a/.github/linters/ct.yaml
+++ b/.github/linters/ct.yaml
@@ -1,17 +1,18 @@
 # See https://github.com/helm/chart-testing#configuration
-remote: origin
-target-branch: main
+additional-commands:
+  - sh -ec "if [ -f '{{ .Path }}/ci/lint.sh' ]; then shellcheck '{{ .Path }}/ci/lint.sh'; bash '{{ .Path }}/ci/lint.sh'; fi"
+  # - helm unittest --helm3 --strict --file unittests/*.yaml --file 'unittests/**/*.yaml' {{ .Path }}
 chart-dirs:
   - charts
 chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami
   - grafana=https://grafana.github.io/helm-charts
   - prometheus-community=https://prometheus-community.github.io/helm-charts
-github-groups: true
-helm-extra-args: --timeout 600s
 excluded-charts:
   # If not running on GCE, will error: "Failed to get GCE config"
   - prometheus-to-sd
-additional-commands:
-  - sh -ec "if [ -f '{{ .Path }}/ci/lint.sh' ]; then shellcheck '{{ .Path }}/ci/lint.sh'; bash '{{ .Path }}/ci/lint.sh'; fi"
-  # - helm unittest --helm3 --strict --file unittests/*.yaml --file 'unittests/**/*.yaml' {{ .Path }}
+github-groups: true
+helm-extra-args: --timeout 600s
+remote: origin
+target-branch: main
+validate-maintainers: false
