--- a/charts/kube-prometheus-stack/Chart.yaml
+++ b/charts/kube-prometheus-stack/Chart.yaml
@@ -15,7 +15,7 @@ maintainers:
   - name: GMartinez-Sisti
     email: kube-prometheus-stack@sisti.pt
     url: https://github.com/GMartinez-Sisti
-  - name: jkroepke
+  - name: Jan-Otto Kröpke
     email: github@jkroepke.de
     url: https://github.com/jkroepke
   - name: scottrigby
