[ci] Extend image detection for values.yaml
Signed-off-by: Jan-Otto Kröpke <github@jkroepke.de>

--- a/renovate.json
+++ b/renovate.json
@@ -23,7 +23,7 @@
         "(^|/).+\\.yaml$"
       ],
       "matchStrings": [
-        "\\s*image:\\s+registry:\\s*[\\\"']?(?<registry>.*?)[\\\"']?\\s+name:\\s*[\\\"']?(?<repository>.*?)[\\\"']?\\s+tag:\\s*[\\\"']?(?<currentValue>[\\w+\\.\\-]*)(?:@(?<currentDigest>sha256:[a-f0-9]+))?[\\\"']?"
+        "\\s*image:\\s+registry:\\s*[\\\"']?(?<registry>.*?)[\\\"']?\\s+(?:repository|name):\\s*[\\\"']?(?<repository>.*?)[\\\"']?\\s+tag:\\s*[\\\"']?(?<currentValue>[\\w+\\.\\-]*)(?:@(?<currentDigest>sha256:[a-f0-9]+))?[\\\"']?"
       ],
       "depNameTemplate": "{{{ registry }}}/{{{ repository }}}",
       "datasourceTemplate": "docker"
