--- a/charts/kube-prometheus-stack/charts/crds/templates/upgrade/serviceaccount.yaml
+++ b/charts/kube-prometheus-stack/charts/crds/templates/upgrade/serviceaccount.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 automountServiceAccountToken: {{ .Values.upgradeJob.serviceAccount.automountServiceAccountToken }}
 metadata:
-  name: {{ include "kube-prometheus-stack.upgradeCRD.serviceAccountName" . }}
+  name: {{ include "kube-prometheus-stack.crd.upgradeJob.serviceAccountName" . }}
   namespace: {{ template "kube-prometheus-stack.namespace" . }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade,pre-rollback
@@ -13,7 +13,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
     {{- end }}
   labels:
-    {{- include "kube-prometheus-stack.upgradeCRD.labels" . | nindent 4 }}
+    {{- include "kube-prometheus-stack.crd.upgradeJob.labels" . | nindent 4 }}
     {{- with .Values.upgradeJob.serviceAccount.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
