feat: add revisionHistoryLimit to prometheus-cloudwatch-exporter
Signed-off-by: Carsten Sonyi <carsten.sonyi@yahoo.de>

--- a/charts/prometheus-cloudwatch-exporter/values.yaml
+++ b/charts/prometheus-cloudwatch-exporter/values.yaml
@@ -61,6 +61,8 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
+revisionHistoryLimit: 10
+
 aws:
   role:
   # Enables usage of regional STS endpoints rather than global which is default
