feat: add revisionHistoryLimit to prometheus-consul-exporter

--- a/charts/prometheus-consul-exporter/values.yaml
+++ b/charts/prometheus-consul-exporter/values.yaml
@@ -62,6 +62,8 @@ resources: {}
   #  cpu: 100m
   #  memory: 128Mi
 
+revisionHistoryLimit: 10
+
 serviceMonitor:
   # When set true then use a ServiceMonitor to configure scraping
   enabled: false
