feat: add revisionHistoryLimit to prometheus-ipmi-exporter

--- a/charts/prometheus-ipmi-exporter/templates/deployment.yaml
+++ b/charts/prometheus-ipmi-exporter/templates/deployment.yaml
@@ -7,6 +7,7 @@ metadata:
     {{- include "prometheus-ipmi-exporter.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
       {{- include "prometheus-ipmi-exporter.selectorLabels" . | nindent 6 }}
