--- a/charts/prometheus-json-exporter/values.yaml
+++ b/charts/prometheus-json-exporter/values.yaml
@@ -115,6 +115,10 @@ resources: {}
 #   cpu: 100m
 #   memory: 128Mi
 
+## Number of replicasets to retain ##
+## default value is 10, 0 will not retain any replicasets and make rollbacks impossible ##
+revisionHistoryLimit: 10
+
 environmentVariables: []
   # - name: some-secret-variable
   #   valueFrom:
