--- a/charts/prometheus-memcached-exporter/templates/deployment.yaml
+++ b/charts/prometheus-memcached-exporter/templates/deployment.yaml
@@ -8,6 +8,7 @@ spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
       {{- include "prometheus-memcached-exporter.selectorLabels" . | nindent 6 }}
