feat: add revisionHistoryLimit to prometheus-modbus-exporter

--- a/charts/prometheus-modbus-exporter/templates/deployment.yaml
+++ b/charts/prometheus-modbus-exporter/templates/deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     {{- include "prometheus-modbus-exporter.labels" . | nindent 4 }}
 spec:
   replicas: 1
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
       {{- include "prometheus-modbus-exporter.selectorLabels" . | nindent 6 }}
