feat: add revisionHistoryLimit to prometheus-nats-exporter
Signed-off-by: Carsten Sonyi <carsten.sonyi@yahoo.de>

--- a/charts/prometheus-nats-exporter/templates/deployment.yaml
+++ b/charts/prometheus-nats-exporter/templates/deployment.yaml
@@ -9,6 +9,7 @@ metadata:
     helm.sh/chart: {{ include "prometheus-nats-exporter.chart" . }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
       app.kubernetes.io/name: {{ include "prometheus-nats-exporter.name" . }}
