--- a/charts/prometheus-pingdom-exporter/templates/secret.yaml
+++ b/charts/prometheus-pingdom-exporter/templates/secret.yaml
@@ -11,8 +11,5 @@ metadata:
     {{- include "prometheus-pingdom-exporter.labels" . | nindent 4 }}
 type: Opaque
 data:
-  user: {{ .Values.pingdom.user | b64enc }}
-  password: {{ .Values.pingdom.password | b64enc }}
-  appId: {{ .Values.pingdom.appId | b64enc }}
-  accountEmail: {{ .Values.pingdom.accountEmail | b64enc }}
+  apiToken: {{ .Values.pingdom.apiToken | b64enc }}
 {{- end }}
