--- a/charts/prometheus-pingdom-exporter/values.yaml
+++ b/charts/prometheus-pingdom-exporter/values.yaml
@@ -5,9 +5,9 @@
 replicaCount: 1
 
 image:
-  # we use camptocamp/prometheus-pingdom-exporter image as giantswarm did not publish recent versions after 0.1.1
-  repository: camptocamp/prometheus-pingdom-exporter
-  tag: 20190610-1
+  repository: ghcr.io/monotek/pingdom-exporter
+  # if not set appVersion field from Chart.yaml is used
+  tag: ""
   pullPolicy: IfNotPresent
 
 nameOverride: ""
@@ -40,16 +40,7 @@ affinity: {}
 
 # configuration of the pingdom credentials
 pingdom:
-  # username of the pingdom account
-  user: somebody@invalid
-  # password of the pingdom account
-  password: totallysecret
-  # application id / api secret can be created on the pingdom website
-  appId: alsototallysecret
-  # account email of the account owner if using multiaccount / team accounts
-  accountEmail: somebodyorelse@invalid
-  # time (in seconds) between accessing the Pingdom  API
-  wait: 10
+  apiToken: "YourPingdomApiToken"
 
 pod:
   annotations: {}
