fix telemetry port
Signed-off-by: r0bj <r0bj@users.noreply.github.com>

--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -222,7 +222,7 @@ spec:
             {{- end }}
             path: /readyz
             {{- if .Values.kubeRBACProxy.enabled }}
-            port: {{ .Values.service.port | default 8081 }}
+            port: {{ .Values.selfMonitor.telemetryPort | default 8081 }}
             scheme: HTTPS
             {{- else }}
             port: {{ $telemetryPort }}
